--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <a href="index.html" class="nav-logo">
-                <span class="logo-icon">⚡</span>
+                <img src="img/digitallyconnected.png" alt="Digitally Connected Logo" class="logo-img" />
                 <span class="logo-text">Digitally<span class="accent">Connected</span></span>
             </a>
             <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -255,7 +255,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <a href="index.html" class="nav-logo">
-                        <span class="logo-icon">⚡</span>
+                        <img src="img/digitallyconnected.png" alt="Digitally Connected Logo" class="logo-img" />
                         <span class="logo-text">Digitally<span class="accent">Connected</span></span>
                     </a>
                     <p class="footer-tagline">We help brands to build their digital presence</p>
