--- a/services/web-development.html
+++ b/services/web-development.html
@@ -181,7 +181,7 @@
                 <div class="included-card">
                     <div class="included-num">05</div>
                     <h3>Contact Page</h3>
-                    <p>Make it easy for customers to reach you with a clean contact form and your details.</p>
+                    <p>Make it easy for customers to reach you with your contact details.</p>
                 </div>
             </div>
         </div>
