--- a/services/google-business.html
+++ b/services/google-business.html
@@ -4,16 +4,29 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Google Business Profile Setup – Digitally Connected</title>
+    <title>Google Business Profile Setup Sri Lanka | Local SEO</title>
     <meta name="description"
-        content="Get found by local customers on Google. Digitally Connected sets up and optimizes your Google Business Profile for maximum local search visibility." />
+        content="Get found by local customers on Google. Professional Google Business Profile setup and optimization in Sri Lanka. Boost local search visibility and credibility today." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/animations.css" />
+    <link rel="stylesheet" href="https://digicon.com.lk/css/style.css" />
+    <link rel="stylesheet" href="https://digicon.com.lk/css/animations.css" />
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TJ1XN86976"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TJ1XN86976');
+    </script>
+    
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE_HERE" />
 </head>
 
 <body>
@@ -22,7 +35,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <a href="../index.html" class="nav-logo">
-                <img src="../img/digitallyconnected.jpeg" alt="Digitally Connected Logo" class="logo-img" />
+                <img src="../img/digitallyconnected.jpeg" alt="Digitally Connected - Digital Marketing Agency Sri Lanka Logo" class="logo-img" loading="eager" width="40" height="40" />
                 <span class="logo-text">Digitally<span class="accent">Connected</span></span>
             </a>
             <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
