--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,29 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us – Digitally Connected | Get in Touch</title>
+    <title>Contact Digitally Connected | Get Your Website Started</title>
     <meta name="description"
-        content="Contact Digitally Connected to get started with your website, social media management, or Google Business Profile. Email: edigitallyconnected@gmail.com | Phone: 0752383298" />
+        content="Contact Digitally Connected for affordable web development, social media management, or Google Business Profile. Email: edigitallyconnected@gmail.com | Phone: +94-75-238-3298" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/animations.css" />
+    <link rel="stylesheet" href="https://digicon.com.lk/css/style.css" />
+    <link rel="stylesheet" href="https://digicon.com.lk/css/animations.css" />
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TJ1XN86976"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TJ1XN86976');
+    </script>
+    
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE_HERE" />
 </head>
 
 <body>
@@ -22,7 +35,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <a href="index.html" class="nav-logo">
-                <img src="img/digitallyconnected.jpeg" alt="Digitally Connected Logo" class="logo-img" />
+                <img src="img/digitallyconnected.jpeg" alt="Digitally Connected - Digital Marketing Agency Sri Lanka Logo" class="logo-img" loading="eager" width="40" height="40" />
                 <span class="logo-text">Digitally<span class="accent">Connected</span></span>
             </a>
             <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -255,7 +268,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <a href="index.html" class="nav-logo">
-                        <img src="img/digitallyconnected.jpeg" alt="Digitally Connected Logo" class="logo-img" />
+                        <img src="img/digitallyconnected.jpeg" alt="Digitally Connected - Digital Marketing Agency Sri Lanka Logo" class="logo-img" loading="lazy" width="40" height="40" />
                         <span class="logo-text">Digitally<span class="accent">Connected</span></span>
                     </a>
                     <p class="footer-tagline">We help brands to build their digital presence</p>
