added work,career,blog pages

--- a/services.html
+++ b/services.html
@@ -63,6 +63,7 @@
                         <li><a href="services/google-business.html">Google Business Profile</a></li>
                     </ul>
                 </li>
+                <li><a href="work.html" class="nav-link">Our Work</a></li>
                 <li><a href="about.html" class="nav-link">About Us</a></li>
                 <li><a href="contact.html" class="nav-link">Contact Us</a></li>
                 <li><a href="contact.html" class="nav-cta-btn">Get Started</a></li>
@@ -234,6 +235,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="services.html">Services</a></li>
+                        <li><a href="work.html">Our Work</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
@@ -246,17 +248,14 @@
                         <li><a href="services/google-business.html">Google Business Profile</a></li>
                     </ul>
                 </div>
-                <div class="footer-contact">
-                    <h4>Contact Us</h4>
-                    <div class="footer-contact-item">
-                        <span>📧</span>
-                        <a href="mailto:edigitallyconnected@gmail.com">edigitallyconnected@gmail.com</a>
-                    </div>
-                    <div class="footer-contact-item">
-                        <span>📞</span>
-                        <a href="tel:0752383298">0752383298</a>
-                    </div>
+                <div class="footer-links">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="careers.html">Careers</a></li>
+                    </ul>
                 </div>
+
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2026 Digitally Connected. All rights reserved.</p>
