--- a/services/social-media.html
+++ b/services/social-media.html
@@ -248,6 +248,7 @@
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../services.html">Services</a></li>
+                        <li><a href="../work.html">Our Work</a></li>
                         <li><a href="../about.html">About Us</a></li>
                         <li><a href="../contact.html">Contact Us</a></li>
                     </ul>
@@ -260,16 +261,12 @@
                         <li><a href="google-business.html">Google Business Profile</a></li>
                     </ul>
                 </div>
-                <div class="footer-contact">
-                    <h4>Contact Us</h4>
-                    <div class="footer-contact-item">
-                        <span>📧</span>
-                        <a href="mailto:edigitallyconnected@gmail.com">edigitallyconnected@gmail.com</a>
-                    </div>
-                    <div class="footer-contact-item">
-                        <span>📞</span>
-                        <a href="tel:0752383298">0752383298</a>
-                    </div>
+                <div class="footer-links">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="../blog.html">Blog</a></li>
+                        <li><a href="../careers.html">Careers</a></li>
+                    </ul>
                 </div>
             </div>
             <div class="footer-bottom">
